@@ -23,6 +23,8 @@ svn trunk
 * ``paste.httpexceptions.HTTPExceptionHandler`` will no longer catch
   exceptions raised during the app_iter iteration.
 
+* Fix assigning to ``WSGIResponse.charset`` breaking the content-type.
+
 1.4.2
 -----
 
